--- a/Object_Detection_in_Images_using_FasterRCNN.ipynb
+++ b/Object_Detection_in_Images_using_FasterRCNN.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMMtv2nmo2dru1KEPxDIhdE",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMMtv2nmo2dru1KEPxDIhdE"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/BirajKaranjit/Object-Detection-in-Images-using-FasterRCNN_ResNet_50_FPN-Network-Model/blob/main/Object_Detection_in_Images_using_FasterRCNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
